fix search and vài thứ lặt vặt khác